# essay-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
data/raw/: sample_train.csv
src/: __init__.py  cli.py
src/core/: __init__.py  config.py  features.py  model.py  preprocessor.py
src/scoring/: __init__.py  feedback.py  scorer.py
src/utils/: __init__.py  io.py
tests/: __init__.py
tests/fixtures/: sample_essays.json
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_features.py  test_model.py  test_preprocessor.py
